--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -3,10 +3,7 @@
 
     <string name="app_name">Secrecy</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="title_activity_main">Files</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_vaults">VaultsActivity</string>
-    <string name="title_activity_list_vault">ListVaultActivity</string>
     <string name="title_activity_file_viewer">Open with Secrecy</string>
 
     <string-array name="donation_google_catalog_values">
@@ -20,28 +17,36 @@
     <string name="title_activity_choose_folder">Choose a Folder</string>
     <string name="chooser_title">Pick a File…</string>
     <string name="dismiss">DISMISS</string>
-    <string name="donate_description"><![CDATA[<p>
-			Why should I donate?</p>
+    <string name="donate_description">
+<![CDATA[<h3>
+			Buy me a coffee!</h3>
 		<p>
 			By donating, you are:</p>
-		<ul>
-			<li>
-				Acknowledging my hardwork</li>
-			<li>
-				Investing in the future of this software</li>
-			<li>
-				Buying me coffee for college exam</li>
-			<li>
-				Helping me buy expensive Medical reference books</li>
-		</ul>
+			&#8226; Acknowledging my hardwork<br>
+			&#8226; Investing in the future of this software<br>
+			&#8226; Buying me coffee for college exam :)<br>
+			&#8226; Helping me buy expensive Medical reference books<br>
 		<p>
 			More importantly</p>
-		<ul>
-			<li>
-				<strong>By donating, you are helping to bring free advanced functions in the future, if any.</strong></li>
-		</ul>
-]]></string>
+	    <p>
+		<strong>By donating, you can enjoy many more advanced functions.</strong>
+		</p>
+]]>
+    </string>
     <string name="OK">OK</string>
     <string name="cancel">Cancel</string>
     <string name="import_files">Import Files to Secrecy</string>
+    <string name="empty_list">There\'s nothing here!</string>
+    <string name="hint_add_vault">Try creating a new vault</string>
+    <string name="next">continue</string>
+    <string name="hint_add_files">Try adding files here</string>
+    <string name="hint_vault_name">Vault Name</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_confirm_password">Confirm Password</string>
+    <string name="action_donate">Donate</string>
+    <string name="action_add_vault">Add vault</string>
+    <string name="title_activity_launcher">LauncherActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_premium">PremiumActivity</string>
+
 </resources>
