--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -47,4 +47,5 @@
     <string name="Dialog__purchased">قمت بالتبرع!</string>
     <string name="Dialog__purchase_message">شكرا لشرائك \"باقة التبرع\"!</string>
     <string name="Error__cannot_set_up_IAP">مشكلة إعداد الفواتير في التطبيق. الرجاء التحقق من البلي ستور الخاص بك.</string>
+    <string name="App__slogan">كونوا بأمان حول الفضوليين™</string>
 </resources>
