--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -47,11 +47,5 @@
     <string name="Dialog__purchased">Bereits gespendet!</string>
     <string name="Dialog__purchase_message">Vielen Dank für den Erwerb des Unterstützerpakets!</string>
     <string name="Error__cannot_set_up_IAP">Problem beim Einrichten des In-App-Kaufes. Bitte überprüfen Sie Ihren Play Store.</string>
-    <string-array name="Donation__google_catalog_values">
-        <item>2 USD</item>
-        <item>5 USD</item>
-        <item>10 USD</item>
-        <item>15 USD</item>
-        <item>20 USD</item>
-    </string-array>
+    <string name="App__slogan">Be safe around geeks™</string>
 </resources>
