--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,15 @@
     <string name="Dialog__purchase_message">Thank you for purchasing the Donation Package!</string>
     <string name="Error__cannot_set_up_IAP">Problem setting up in-app billing. Please check your Play store.</string>
     <string name="App__slogan">Be safe around geeks™</string>
+    <string name="Vault__old_passphrase">Old passphrase</string>
+    <string name="Vault__new_passphrase">New passphrase</string>
+    <string name="Vault__confirm_new_passphrase">Confirm new passphrase</string>
+    <string name="Vault__change_passphrase">Change passphrase</string>
+    <string name="Error__passphrase_no_match_message">The passphrases you have entered does not match!</string>
+    <string name="Error__change_passphrase_failed">Error changing passphrase</string>
+    <string name="Error__change_passphrase_failed_message">Changing the passphrase has failed! Maybe the old passphrase was wrong.</string>
+    <string name="Vault__change_passphrase_ok">Passphrase changed</string>
+    <string name="Vault__change_passphrase_ok_message">The passphrase for your vault has been changed! Please login to your vault with your new passphrase.</string>
+    <string name="Error__passphrase_empty_message">Passphrase must not be empty!</string>
+
 </resources>
