--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,11 @@
     <string name="Vault__change_passphrase_ok">Passphrase changed</string>
     <string name="Vault__change_passphrase_ok_message">The passphrase for your vault has been changed! Please login to your vault with your new passphrase.</string>
     <string name="Error__passphrase_empty_message">Passphrase must not be empty!</string>
+    <string name="Error__old_vault_format_message">Vault needs to be updated to the new encryption format! Please don\'t close Secrecy while the update is running!</string>
+    <string name="Error__old_vault_format">Vault update required</string>
+    <string name="Error__updating_vault">Update error</string>
+    <string name="Error__updating_vault_message">Maybe you entered the wrong password?</string>
+    <string name="Error__vault_updated">Vault updated</string>
+    <string name="Error__vault_updated_message">Your vault has been updated to the new format.</string>
 
 </resources>
