--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,5 @@
     <string name="Error__updating_vault_message">Maybe you entered the wrong password?</string>
     <string name="Error__vault_updated">Vault updated</string>
     <string name="Error__vault_updated_message">Your vault has been updated to the new format.</string>
-
+    <string name="action_select_all">Select all</string>
 </resources>
