--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,8 @@
     <string name="Error__passphrase_empty_message">Passphrase must not be empty!</string>
     <string name="Error__old_vault_format_message">Vault needs to be updated to the new encryption format! Please don\'t close Secrecy while the update is running!</string>
     <string name="Error__old_vault_format">Vault update required</string>
+    <string name="Upgrade__backup_beforehand_message">Would you like to abort upgrade and backup first? Click cancel and continue to upgrade.</string>
+    <string name="Upgrade__backup_beforehand">Backup beforehand?</string>
     <string name="Error__updating_vault">Update error</string>
     <string name="Error__updating_vault_message">Maybe you entered the wrong password?</string>
     <string name="Error__vault_updated">Vault updated</string>
