Change passphrase to password

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -48,25 +48,25 @@
     <string name="Dialog__purchase_message">Vielen Dank für den Erwerb des Unterstützerpakets!</string>
     <string name="Error__cannot_set_up_IAP">Problem beim Einrichten des In-App-Kaufes. Bitte überprüfen Sie Ihren Play Store.</string>
     <string name="App__slogan">Be safe around geeks™</string>
-    <string name="Vault__old_passphrase">Alte Passphrase</string>
-    <string name="Vault__new_passphrase">Neue Passphrase</string>
-    <string name="Vault__confirm_new_passphrase">Passphrase bestätigen</string>
-    <string name="Vault__change_passphrase">Passphrase ändern</string>
-    <string name="Error__passphrase_no_match_message">Die eingegeben Passphrasen stimmen nicht überein!</string>
-    <string name="Error__change_passphrase_failed">Ändern fehlgeschlagen</string>
-    <string name="Error__change_passphrase_failed_message">Ändern der Passphrase fehlgeschlagen! Eventuell war die alte Passphrase nicht korrekt.</string>
-    <string name="Vault__change_passphrase_ok">Passphrase wurde geändert</string>
-    <string name="Vault__change_passphrase_ok_message">Die Passphrase für Ihren Tresor wurde geändert! Bitte öffnen Sie ihren Tresor nun mit ihrer neuen Passphrase.</string>
-    <string name="Error__passphrase_empty_message">Passphrase darf nicht leer sein!</string>
+    <string name="Vault__old_password">Alte Password</string>
+    <string name="Vault__new_password">Neue Password</string>
+    <string name="Vault__confirm_new_password">Password bestätigen</string>
+    <string name="Vault__change_password">Password ändern</string>
+    <string name="Error__password_no_match_message">Die eingegeben Passwordn stimmen nicht überein!</string>
+    <string name="Error__change_password_failed">Ändern fehlgeschlagen</string>
+    <string name="Error__change_password_failed_message">Ändern der Password fehlgeschlagen! Eventuell war die alte Password nicht korrekt.</string>
+    <string name="Vault__change_password_ok">Password wurde geändert</string>
+    <string name="Vault__change_password_ok_message">Die Password für Ihren Tresor wurde geändert! Bitte öffnen Sie ihren Tresor nun mit ihrer neuen Password.</string>
+    <string name="Error__password_empty_message">Password darf nicht leer sein!</string>
     <string name="Error__old_vault_format_message">Ihr Tresor muss auf das neue Verschlüsselungsverfahren aktualisiert werden.</string>
     <string name="Error__old_vault_format">Tresor muss aktualisiert werden</string>
     <string name="Error__updating_vault">Aktualisierungsfehler</string>
-    <string name="Error__updating_vault_message">Haben Sie eventuell eine falsche Passphrase eingegeben?</string>
+    <string name="Error__updating_vault_message">Haben Sie eventuell eine falsche Password eingegeben?</string>
     <string name="Vault__vault_updated">Tresor aktualisiert</string>
     <string name="action_select_all">Alle auswählen</string>
     <string name="Vault__initializing">Initialisiere Tresor...</string>
     <string name="Vault_updating">Tresor wird aktualisiert...</string>
-    <string name="Vault__changing_passphrase">Passphrase wird geändert...</string>
+    <string name="Vault__changing_password">Password wird geändert...</string>
     <string name="Restore__title">Wiederherstellen</string>
     <string name="Restore__in_progress">Wiederherstellen läuft</string>
     <string name="Restore__finish">Wiederherstellen abgeschlossen. %s wurde wiederhergestellt</string>
