--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,16 +49,16 @@
     <string name="Dialog__purchase_message">Thank you for purchasing the Donation Package!</string>
     <string name="Error__cannot_set_up_IAP">Problem setting up in-app billing. Please check your Play store.</string>
     <string name="App__slogan">Be safe around geeks™</string>
-    <string name="Vault__old_passphrase">Old passphrase</string>
-    <string name="Vault__new_passphrase">New passphrase</string>
-    <string name="Vault__confirm_new_passphrase">Confirm new passphrase</string>
-    <string name="Vault__change_passphrase">Change passphrase</string>
-    <string name="Error__passphrase_no_match_message">The passphrases you have entered does not match!</string>
-    <string name="Error__change_passphrase_failed">Error changing passphrase</string>
-    <string name="Error__change_passphrase_failed_message">Changing the passphrase has failed! Maybe the old passphrase was wrong.</string>
-    <string name="Vault__change_passphrase_ok">Passphrase changed</string>
-    <string name="Vault__change_passphrase_ok_message">The passphrase for your vault has been changed! Please login to your vault with your new passphrase.</string>
-    <string name="Error__passphrase_empty_message">Passphrase must not be empty!</string>
+    <string name="Vault__old_password">Old password</string>
+    <string name="Vault__new_password">New password</string>
+    <string name="Vault__confirm_new_password">Confirm new password</string>
+    <string name="Vault__change_password">Change password</string>
+    <string name="Error__password_no_match_message">The passwords you have entered does not match!</string>
+    <string name="Error__change_password_failed">Error changing password</string>
+    <string name="Error__change_password_failed_message">Changing the password has failed! Maybe the old password was wrong.</string>
+    <string name="Vault__change_password_ok">Password changed</string>
+    <string name="Vault__change_password_ok_message">The password for your vault has been changed! Please login to your vault with your new password.</string>
+    <string name="Error__password_empty_message">Password must not be empty!</string>
     <string name="Error__old_vault_format_message">Vault needs to be updated to the new encryption format!</string>
     <string name="Error__old_vault_format">Vault update required</string>
     <string name="Upgrade__backup_beforehand_message">Would you like to create a backup of your vault? Click cancel to continue the update without a backup!</string>
@@ -70,7 +70,7 @@
     <string name="action_select_all">Select all</string>
     <string name="Vault__initializing">Initializing Vault…</string>
     <string name="Vault_updating">Vault is updating…</string>
-    <string name="Vault__changing_passphrase">Changing passphrase…</string>
+    <string name="Vault__changing_password">Changing password…</string>
     <string name="Restore__overwrite_alert">Restoring a vault would delete the existing version. Continue?</string>
     <string name="Settings_max_image_size">Maximal image size</string>
     <string name="Settings__performance">Performance</string>
