Added selectable maximal image size
Let the user select between three maximal image sizes in megapixel:
Small: 2 > X > 4
Medium: 4 > X > 8
Large: 8 > X > 16

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -78,4 +78,11 @@
     <string name="Backup__finish">Backup wurde abgeschlossen. Ihr Backup finden Sie unter %s.</string>
     <string name="Backup__title">Tresor Backup</string>
     <string name="Backup__in_progress">Backup wird erstellt</string>
+    <string name="Settings_max_image_size">Maximale Bildgröße</string>
+    <string name="Settings__performance">Leistung</string>
+    <string-array name="array_image_size_entries">
+        <item>Klein</item>
+        <item>Mittel</item>
+        <item>Groß</item>
+    </string-array>
 </resources>
