--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -71,6 +71,8 @@ En faisant un don, vous pourrez profiter des nombreuses fonctions plus avancées
     <string name="Restore__overwrite_alert">Restaurer le Coffre-fort effacera la version existante. Continuer ?</string>
     <string name="Settings_max_image_size">Taille d\'image maximale</string>
     <string name="Settings__performance">Performance</string>
+    <string name="Settings_sort_vault_content">Les fichiers de la vue Liste sont triés par ordre alphabétique</string>
+    <string name="Settings_sort_vault_content_message">Trier mes Coffres-forts en vue Liste</string>
     <string-array name="array_image_size_entries">
         <item>Petite</item>
         <item>Moyenne</item>
