--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,8 @@
     <string name="Restore__overwrite_alert">Restoring a vault would delete the existing version. Continue?</string>
     <string name="Settings_max_image_size">Maximal image size</string>
     <string name="Settings__performance">Performance</string>
+    <string name="Settings_sort_vault_content">List items are sorted alphabetically</string>
+    <string name="Settings_sort_vault_content_message">Sort vault list items</string>
     <string-array name="array_image_size_entries">
         <item>Small</item>
         <item>Medium</item>
