Add sort by last modified functionality.
(Essentially the same as last added sorting.)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,6 @@
     <string-array name="array_vault_sort_entries">
         <item>Alphabet</item>
         <item>Alphabet, group by type</item>
+        <item>Last Modified Date</item>
     </string-array>
 </resources>
